<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="9"
    tools:context=".UserPackage.DisplayUserActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/display_name"
        android:layout_weight="1"></TextView>
    <LinearLayout
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">
            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:gravity="center|start"
                    android:text="@string/details"
                    android:padding="3dip"
                    ></TextView>

                <TextView
                    android:layout_width="0dp"
                    android:text="@string/useradd"
                    android:padding="3dip"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:gravity="center|start"

                    ></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/number"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>

                <TextView
                    android:id="@+id/display_number"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/email"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>

                <TextView
                    android:id="@+id/display_email"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/gender"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>

                <TextView
                    android:id="@+id/display_gender"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/age"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>

                <TextView
                    android:id="@+id/display_age"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/height"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>

                <TextView
                    android:id="@+id/display_height"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/weight"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>

                <TextView
                    android:id="@+id/display_weight"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/profession"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>

                <TextView
                    android:id="@+id/display_profession"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/level"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>

                <TextView
                    android:id="@+id/display_level"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/focus"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>

                <TextView
                    android:id="@+id/display_focus"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>
            </TableRow>
            <TableRow >
                <TextView
                    android:text="@string/workout"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>

                <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/display_workout"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/time"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>

                <TextView
                    android:id="@+id/display_time"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center|start"
                    android:layout_width="0dp"
                    android:padding="3dip"></TextView>
            </TableRow>

        </TableLayout>

    </LinearLayout>
    </LinearLayout>