<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashPackage.WelcomeActivity">
    <ImageView
        android:src="@drawable/welcome"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></ImageView>
    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                android:gravity="bottom"
                android:textStyle="bold"
                android:paddingBottom="20dp"
                android:fontFamily="@font/museo700regular"
                android:text="@string/welcome_text"
                android:layout_weight="2"></TextView>

            <TextView
                android:lines="2"
                android:fontFamily="@font/museo500"
                android:textColor="@color/white"
                style="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/welcome_text_below"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4">


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/welcome_signuptext"
                    android:gravity="center|start"
                    android:textColor="@color/white"
                    android:fontFamily="@font/museo700regular"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">
                <Button
                    android:onClick="taketosignup"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/museo500"
                    android:background="@drawable/round"
                    android:text="@string/welcome_phone_btn"></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1.5">
                <TextView
                    android:textColor="@color/white"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="end"
                    android:fontFamily="@font/museo500"
                    android:text="@string/alreadyregistered"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></TextView>
                <TextView
                    android:onClick="taketoLogin"
                    android:fontFamily="@font/museo500"
                    android:paddingLeft="5dp"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:text="@string/login"
                    android:layout_gravity="start"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></TextView>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>