<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="11"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".UserPackage.SessionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="3"
        android:orientation="vertical"
        android:layout_weight="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/future_slot"
            style="@style/TextAppearance.AppCompat.Headline"
            android:gravity="center"
            android:layout_weight="1"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="5"
            android:layout_weight="1">
            <ImageView
                android:tint="@color/colorPrimary"
                android:id="@+id/dateandtimepicker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></ImageView>
            <TextView
                android:visibility="invisible"
                android:id="@+id/datetimepickertext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/select"
                style="@style/TextAppearance.AppCompat.Medium"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:visibility="invisible"
                android:id="@+id/date_picker_text"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextAppearance.AppCompat.Medium"></TextView>
            <TextView
                android:visibility="invisible"
                android:id="@+id/time_picker_text"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextAppearance.AppCompat.Medium"></TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="7"
        android:orientation="vertical"
        android:layout_weight="7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/availabe_slot"></TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:id="@+id/recyclerview_slots"></androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
    <LinearLayout
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:elevation="10dp"
            android:id="@+id/btn_slot"
            android:text="@string/btn_slot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></Button>
    </LinearLayout>

</LinearLayout>